# search-comparisons

./: .dockerignore  .env.local  .env.prod  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup_dev.sh  start_local.sh
.github/workflows/: main.yml
backend/: .env  .env.example  Dockerfile  README.md  query_cache.json  render.yaml  requirements.txt  search_comparisons.db
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  models.py  routes.py
backend/app/core/: __init__.py  config.py  database.py  environment.py  init_db.py
backend/app/models/: judgement.py
backend/app/routes/: judgement.py  quepid.py
backend/app/services/: __init__.py  ads_service.py  boost_service.py  cache_service.py  judgement_service.py  quepid_service.py  query_transformation.py  scholar_service.py  search_service.py  semantic_scholar_service.py  session_service.py  (+2 more)
backend/query_intent_service/: __init__.py  agent.py  llm_service.py  requirements.txt
backend/scripts/: test_ads_connection.py  test_ads_field_weights.py  test_boost_experiments.py  test_field_boost_experiments.py  test_search_endpoint.py
backend/tests/: __init__.py  conftest.py  test_ads_service.py  test_quepid_api.py  test_quepid_api_fixed.py  test_query_agent.py  test_query_transformation.py  test_utils.py
frontend/: .env.development  .env.example  .env.production  .gitignore  package-lock.json  package.json  render.yaml
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  reportWebVitals.js
(+52 files in other folders)
