[project]
name = "search-comparisons"
version = "0.1.0"
description = "A powerful search comparison tool that aggregates and analyzes results from multiple academic search engines"
requires-python = ">=3.8,<3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.13.3",
    "scholarly>=1.7.11",
    "langchain>=0.1.20",
    "transformers>=4.30.2",
    "sentence-transformers>=2.2.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.7",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_comparisons"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto" 